# pdfstract

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
templates/: index.html
